--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,13 @@
 
   <!-- common CSS -->
   <link rel="stylesheet" href="./css/common.css">
-
+  <script type="text/javascript" src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=8cb9e561bde2e24c49fcf16e0cda250e"></script>
   <title>React App</title>
 </head>
 
 <body>
   <div id="root"></div>
+
 
 </body>
 
